[package]
name = "rust_logger"
version = "0.1.0"
edition = "2021"

[dependencies]
evdev = "0.12"
chrono = "0.4"
udev = "0.9.3"
input-linux = "0.7.1"
libc = "0.2.171"
crossterm = "0.27"
tui = "0.19"
notify-rust = "4.6"
notify = "6.1"
sha2 = "0.10"
walkdir = "2.4"
lazy_static = "1.4"

[[bin]]
name = "cli"
path = "src/CLI/cli.rs"
#name = "fileHash"
#path = "src/CLI/fileHash.rs"
